@@ -3,9 +3,11 @@ package com.meokplaylist.security;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.io.ClassPathResource;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.KeyFactory;
 import java.security.interfaces.RSAPrivateKey;
@@ -13,41 +15,41 @@ import java.security.interfaces.RSAPublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
+import java.io.InputStream;
 
 @Configuration
 public class RsaKeyConfig {
 
-    @Value("${rsa.private-key-path}")
+    // Option A: 경로(예: keys/private.pem 또는 classpath:keys/private.pem 또는 /etc/keys/private.pem)
+    @Value("${rsa.private-key-path:}")
     private String privateKeyPath;
 
-    @Value("${rsa.public-key-path}")
+    @Value("${rsa.public-key-path:}")
     private String publicKeyPath;
 
     @Bean
     public RSAPrivateKey rsaPrivateKey() throws Exception {
-        byte[] keyBytes = Files.readAllBytes(Paths.get(privateKeyPath));
-        String privateKeyPEM = new String(keyBytes, StandardCharsets.UTF_8)
+        ClassPathResource resource = new ClassPathResource(privateKeyPath);
+        String privateKeyPEM = new String(resource.getInputStream().readAllBytes(), StandardCharsets.UTF_8)
                 .replace("-----BEGIN PRIVATE KEY-----", "")
                 .replace("-----END PRIVATE KEY-----", "")
                 .replaceAll("\\s+", "");
 
         byte[] decoded = Base64.getDecoder().decode(privateKeyPEM);
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decoded);
-        KeyFactory kf = KeyFactory.getInstance("RSA");
-        return (RSAPrivateKey) kf.generatePrivate(keySpec);
+        return (RSAPrivateKey) KeyFactory.getInstance("RSA").generatePrivate(keySpec);
     }
 
     @Bean
     public RSAPublicKey rsaPublicKey() throws Exception {
-        byte[] keyBytes = Files.readAllBytes(Paths.get(publicKeyPath));
-        String publicKeyPEM = new String(keyBytes, StandardCharsets.UTF_8)
+        ClassPathResource resource = new ClassPathResource(publicKeyPath);
+        String publicKeyPEM = new String(resource.getInputStream().readAllBytes(), StandardCharsets.UTF_8)
                 .replace("-----BEGIN PUBLIC KEY-----", "")
                 .replace("-----END PUBLIC KEY-----", "")
                 .replaceAll("\\s+", "");
 
         byte[] decoded = Base64.getDecoder().decode(publicKeyPEM);
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(decoded);
-        KeyFactory kf = KeyFactory.getInstance("RSA");
-        return (RSAPublicKey) kf.generatePublic(keySpec);
+        return (RSAPublicKey) KeyFactory.getInstance("RSA").generatePublic(keySpec);
     }
 }
